[gd_scene load_steps=7 format=3 uid="uid://dvvep8mkaandu"]

[ext_resource type="Script" path="res://NPC/gossip_bubble.gd" id="1_632ns"]
[ext_resource type="FontFile" uid="uid://buk8rv6jrveso" path="res://assets/ui/TinyUnicode.ttf" id="1_bxp22"]
[ext_resource type="Texture2D" uid="uid://bt4kwgggca5vb" path="res://assets/ui/speech_bubble.png" id="2_1swno"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_ogjqg"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_53yyv"]

[sub_resource type="Theme" id="Theme_ph7eb"]
default_font = ExtResource("1_bxp22")
default_font_size = 20

[node name="GossipBalloon" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -101.0
offset_top = -78.0
offset_right = 3.0
theme = SubResource("Theme_ph7eb")
script = ExtResource("1_632ns")

[node name="Balloon" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 104.0
offset_bottom = 78.0
texture = ExtResource("2_1swno")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Dialogue" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 7.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Dialogue/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Dialogue/VBoxContainer" instance=ExtResource("2_ogjqg")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue..."

[node name="Responses" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 17.978
offset_top = 54.585
offset_right = 122.978
offset_bottom = 132.585

[node name="ResponsesMenu" type="VBoxContainer" parent="Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2
script = ExtResource("3_53yyv")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Responses/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
